# maple-sdk

./: .gitignore  .gitmodules
cee/: CMakeLists.txt  CMakeSettings.json  Makefile.simple-working  Makefile.zig-no-worky  NOTES.md  README.md  build.sh  premake5.lua  setup-env.sh
cee/notes/: 2021-04-10-usb-hid.md  2021-04-30-threads-and-tests.md
cee/src/: audio_selector.c  audio_selector.h  audio_stitcher.c  audio_stitcher.h  debug.h  dtmf.c  dtmf.h  hid_client.c  hid_client.h  hid_status.c  hid_status.h  infrareddy.c  infrareddy.h  infrareddy_hid.c  infrareddy_hid.h  libusb_helper.c  libusb_helper.h  log.c  log.h  main.c  main_console.c  main_dll.c  main_gtk.c  main_mingw.c  main_sdl2.c  main_soundio_example.c  main_stitch_example.c  main_win32.c  phony.c  phony.h  phony_hid.c  phony_hid.h  pthread_play.c  pthread_play.h  shared.h  soundio_example.c  soundio_main.c  stitch.c  stitch.h  stitch_picker.c  (+4 more)
cee/src/gtk/: application.c  application.h  infrareddy_view.c  infrareddy_view.h  phone_view.c  phone_view.h  phony_view.c  phony_view.h
cee/src/nix/: stitch.c  stitch.h  stitch_soundio.h
cee/src/sdl/: application.c  application.h
cee/src/win32/: dllmain.c  stitch.c  stitch.h
cee/test/: audio_selector_test.c  audio_selector_test.h  dtmf_test.c  dtmf_test.h  hid_client_test.c  hid_client_test.h  kissfft_test.c  kissfft_test.h  main_test.c  minunit.h  phone_view_test.c  phone_view_test.h  phony_hid_test.c  phony_hid_test.h  phony_test.c  phony_test.h  phony_view_test.c  phony_view_test.h  soundio_fake_test.c  soundio_fake_test.h  stitch_picker_test.c  stitch_picker_test.h  stitch_test.c  stitch_test.h  stitcher_test.c  stitcher_test.h  test_helper.c  test_helper.h  test_main.c
cee/test/fakes/: libusb_fake.c  libusb_fake.h
cee/test/fakes/libusb-1.0/: libusb.c  libusb.h
cee/test/fakes/soundio/: soundio.c  soundio.h
csharp/: README.md
csharp/sdk/: sdk.sln
csharp/sdk/AudioStitcher/: AudioStitcher.cpp  AudioStitcher.h  AudioStitcher.vcxproj  AudioStitcher.vcxproj.filters  cpp.hint
csharp/sdk/Maple/: AudioRouter.cs  AudioStitcher.cs  ControlUnit.cs  Dtmf.cs  ExtensionMethods.cs  HidUsage.cs  Maple.csproj  Phone.cs  PhoneAsync.cs
csharp/sdk/Maple/Vendor DLLs/NAudio/netstandard2.0/: NAudio.deps.json  NAudio.xml
csharp/sdk/MapleEnvironment/: ControlUnit.cs  ExtensionMethods.cs  HidUsage.cs  MapleEnvironment.csproj
csharp/sdk/MaplePhone/: AudioRouter.cs  ControlUnit.cs  ExtensionMethods.cs  HidUsage.cs  Maple.csproj  MaplePhone.csproj  MaplePhoneControl.cs  Phone.cs
csharp/sdk/MaplePhoneTest/: MaplePhoneTest.csproj  MapleTest.csproj  Program.cs
csharp/sdk/MapleTest/: MapleTest.csproj  Program.cs
python/: Makefile  main.py  maple_sdk.py
zig/: README.md  build-all.sh  build.zig  setup-env.sh
zig/examples/: console.c  console.zig
zig/src/: aud.zig  audible.zig  audible_all.zig  audio.zig  devices.zig  foo.c  helpers.zig  hid_client.zig  main_console.zig  main_lib.zig  phony_client.zig  platform.zig  platform_nix.zig  platform_other.zig  platform_win.zig  poly.zig  ring_buffer.zig  sdk_nix.zig  sdk_win.zig  stitch.zig  timer.zig
zig/src/aud/: common.zig  fake.zig  soundio.zig  win.zig
zig/src/fakes/: aud_native.zig  devices.json  devices_asi_defaults.json  devices_only_bad.json  devices_w2c_defaults.json
zig/src/os/: aud_common.zig
zig/src/os/fake/: aud_native.zig
zig/src/os/nix/: aud_native.zig  aud_native_old.zig  audible.zig
zig/src/os/win/: aud_native.zig  audible.zig
zig/src/platform/: audio_win.zig
